# STEMMUS_SCOPE_Processing

./: .bumpversion.cfg  .gitignore  .linkspector.yml  .prospector.yml  .readthedocs.yaml  CITATION.cff  CONTRIBUTING.md  Dockerfile  README.dev.md  README.md  config_file_snellius.txt  environment.yml  environment_3.8.yml  mkdocs.yml  pull_request_template.md  pyproject.toml  run_jupyter_lab_on_compute_node.sh  run_jupyter_lab_snellius.sh  run_jupyter_lab_snellius_dev.sh  setup.cfg  sonar-project.properties
.githooks/: pre-commit
.github/workflows/: build.yml  documentation.yml  markdown-link-check.yml  publish-container.yml  python-publish.yml  sonarcloud.yml
PyStemmusScope/: __init__.py  bmi.py  bmi_utils.py  config_io.py  docker_process.py  forcing_io.py  global_data_selection.py  initializer.py  iostreamer.py  local_process.py  my_module.py  read_forcing.py  save.py  soil_io.py  stemmus_scope.py  utils.py  variable_conversion.py
PyStemmusScope/bmi/: __init__.py  docker_process.py  docker_utils.py  implementation.py  implementation.py.orig  local_process.py  utils.py  variable_reference.py  variable_reference_BACKUP_2561331.py
PyStemmusScope/global_data/: __init__.py  cams_co2.py  cci_landcover.py  copernicus_lai.py  era5.py  eth_canopy_height.py  global_data_selection.py  prism_dem.py  utils.py
PyStemmusScope/global_data/assets/: lccs_to_igbp_table.csv  valid_dem_filenames.txt  valid_eth_canopy_height_filenames.txt
data_download_scripts/: compare_global_data.ipynb  download_CAMS_CO2.py  download_CDS_LAI.py  download_era5land_monthly.py  downloading_global_data.md  era5cli.md  parse_CO2_data.ipynb  parse_canopy_height.ipynb  parse_dem.py  parse_era5_data.ipynb  parse_lai_data.ipynb  valid_eth_canopy_height_files.txt
docs/: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.dev.md  bmi.md  conf.py  downloading_global_data.md  getting_started.md  index.md  index.rst  installation_instructions.md  intro.md  make.bat  project_setup.md  readme_link.rst  reference.md
docs/notebooks/: BMI_demo.ipynb  BMI_groundwater_coupling.ipynb  BMI_groundwater_coupling_copy.ipynb  BMI_groundwater_coupling_csv_plots.ipynb  bmi_MODFLOW_coupling.ipynb  compare_git_branch_results.ipynb  ex8.ipynb  gprc4bmi_demo.ipynb  grpc4bmi_demo.ipynb  modflow_example.ipynb  run_model_in_notebook.ipynb  run_model_on_different_infra.ipynb  run_model_with_different_dataset.ipynb  run_model_with_different_dataset_on_CRIB.ipynb  verify_model_modifications.ipynb
global_data/: downloading_global_data.md  lccs_to_igbp_table.csv
global_data/data_analysis_notebooks/: parse_CO2_data.ipynb  parse_LAI.ipynb  parse_canopy_height.ipynb  parse_dem.ipynb  parse_era5_data.ipynb  parse_landcover.ipynb
global_data/download_scripts/: download_CAMS_CO2.py  download_FAPAR_LAI.py  download_cds_landcover.py  download_era5land_monthly.py  valid_dem_urls.csv
matlab_scripts/: example_python_modules.py  run_model_in_matlab_dev.m
notebooks/: run_model_in_notebook.ipynb  run_model_in_notebook_dev.ipynb  run_model_on_snellius.ipynb  test.ipynb  verify_model_modifications.ipynb
processing/: __init__.py  initializer.py
tests/: __init__.py  test_bmi_docker.py  test_config_io.py  test_docker_model.py  test_docker_utils.py  test_forcing_io.py  test_global_data_selection.py  test_initializer.py  test_iostreamer.py  test_my_module.py  test_read_forcing.py  test_save.py  test_soil_io.py  test_stemmus_scope.py  test_utils.py  test_variable_conversion.py
tests/test_data/: config_file_docker.txt  config_file_global.txt  config_file_test.txt  generate_soil_initial_site_data.py  generate_test_data_global.py
tests/test_data/directories/forcing/plumber2_data/: Mdata.txt  dummy_forcing_file.nc
tests/test_data/directories/global/canopy_height/: ETH_GlobalCanopyHeight_10m_2020_N36W108_Map.tif  ETH_GlobalCanopyHeight_10m_2020_N60E024_Map.tif
tests/test_data/directories/global/co2/: CAMS_CO2_2003-2020_test.nc
tests/test_data/directories/global/dem/: Copernicus_DSM_30_N37_00_W108_00_DEM.tif  Copernicus_DSM_30_N61_00_E024_00_DEM.tif
tests/test_data/directories/global/era5/: era5_10m_u_component_of_wind_2014_hourly.nc  era5_10m_v_component_of_wind_2014_hourly.nc  era5_mean_total_precipitation_rate_2014_hourly.nc  era5_surface_pressure_2014_hourly.nc  era5_surface_solar_radiation_downwards_2014_hourly.nc  era5_surface_thermal_radiation_downwards_2014_hourly.nc
tests/test_data/directories/global/era5-land/: era5-land_2m_dewpoint_temperature_2014_hourly.nc  era5-land_2m_temperature_2014_hourly.nc
tests/test_data/directories/global/lai/: c3s_LAI_19960101000000_GLOBE_PROBAV_V3.0.1.nc  c3s_LAI_19960102000000_GLOBE_PROBAV_V3.0.1.nc
tests/test_data/directories/model_parameters/soil_property/: CLAY2.nc  OC1.nc  OC2.nc  (+6 more)
tests/test_data_forcing/: FI-Hyy_1996-2014_FLUXNET2015_Met.nc
tests/test_data_soil/: CLAY1.nc  Hydraul_Param_SoilGrids_Schaap_sl1.nc  Hydraul_Param_SoilGrids_Schaap_sl2.nc  Hydraul_Param_SoilGrids_Schaap_sl5.nc  Hydraul_Param_SoilGrids_Schaap_sl7.nc  SAND1.nc  SILT2.nc  surfdata.nc
tests/test_data_soil/Schaap/: PTF_SoilGrids_Schaap_sl1_alpha.nc  PTF_SoilGrids_Schaap_sl1_thetar.nc  PTF_SoilGrids_Schaap_sl2_K0.nc  PTF_SoilGrids_Schaap_sl2_Ks.nc  PTF_SoilGrids_Schaap_sl2_L.nc  PTF_SoilGrids_Schaap_sl2_thetar.nc  PTF_SoilGrids_Schaap_sl2_thetas.nc  PTF_SoilGrids_Schaap_sl3_K0.nc  PTF_SoilGrids_Schaap_sl3_alpha.nc  PTF_SoilGrids_Schaap_sl3_n.nc  PTF_SoilGrids_Schaap_sl3_thetar.nc  PTF_SoilGrids_Schaap_sl3_thetas.nc  PTF_SoilGrids_Schaap_sl4_Ks.nc  PTF_SoilGrids_Schaap_sl4_alpha.nc  PTF_SoilGrids_Schaap_sl4_thetar.nc  PTF_SoilGrids_Schaap_sl5_L.nc  PTF_SoilGrids_Schaap_sl5_alpha.nc  PTF_SoilGrids_Schaap_sl5_thetas.nc  PTF_SoilGrids_Schaap_sl6_K0.nc  PTF_SoilGrids_Schaap_sl6_Ks.nc  PTF_SoilGrids_Schaap_sl6_L.nc  PTF_SoilGrids_Schaap_sl6_alpha.nc  PTF_SoilGrids_Schaap_sl6_thetar.nc  PTF_SoilGrids_Schaap_sl6_thetas.nc  PTF_SoilGrids_Schaap_sl7_Ks.nc  PTF_SoilGrids_Schaap_sl7_thetar.nc  PTF_SoilGrids_Schaap_sl7_thetas.nc
tests/test_data_soil/lambda/: lambda_l4.nc  lambda_l5.nc  lambda_l7.nc  lambda_l8.nc
(+47 files in other folders)
