# see documentation, e.g.
# - https://packaging.python.org/tutorials/packaging-projects/#configuring-metadata
# - https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html
# - https://www.python.org/dev/peps/pep-0314/

[metadata]
author = Sarah Alidoost
author_email = f.alidoost@esciencecenter.nl
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
description = python modules for running the STEMMUS-SCOPE model
keywords =
    STEMMUS-SCOPE
    py
long_description = file: README.md
long_description_content_type = text/markdown
name = PyStemmusScope
project_urls =
    Bug Tracker = https://github.com/EcoExtreML/stemmus_scope_processing/issues
url = https://github.com/EcoExtreML/stemmus_scope_processing
version = 0.1.1

[options]
python_requires = >=3.7,<3.10
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    hdf5storage
    netcdf4<=1.5.8
    numpy
    pandas
    xarray

[options.data_files]
# This section requires setuptools>=40.6.0
# It remains empty for now
# Check if MANIFEST.in works for your purposes

[options.extras_require]
dev =
    bump2version
    coverage [toml]
    prospector[with_pyroma]
    isort
    pytest
    pytest-cov
    sphinx
    sphinx_rtd_theme
    sphinx-autoapi
    tox
    myst_parser
publishing =
    twine
    wheel

[options.packages.find]
include = PyStemmusScope, PyStemmusScope.*

[isort]
lines_after_imports = 2
force_single_line = 1
no_lines_before = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
known_first_party = PyStemmusScope
src_paths = PyStemmusScope,tests
line_length = 120
