# see documentation, e.g.
# - https://packaging.python.org/tutorials/packaging-projects/#configuring-metadata
# - https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html
# - https://www.python.org/dev/peps/pep-0314/

[metadata]
author = Sarah Alidoost
author_email = f.alidoost@esciencecenter.nl
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
description = python modules for running the STEMMUS-SCOPE model
keywords =
    STEMMUS-SCOPE
    py
long_description = file: README.md
long_description_content_type = text/markdown
name = PyStemmusScope
project_urls =
    Bug Tracker = https://github.com/EcoExtreML/stemmus_scope_processing/issues
url = https://github.com/EcoExtreML/stemmus_scope_processing
version = 0.2.0

[options]
python_requires = >=3.8,<3.11
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    hdf5storage
    netcdf4<=1.5.8
    numpy
    pandas
    xarray
    rioxarray  # required for interacting with .tiff files
    scipy  # required for xarray's interpolate
    dask  # required for xarray.open_mfdataset lazy loading

[options.data_files]
# This section requires setuptools>=40.6.0
# It remains empty for now
# Check if MANIFEST.in works for your purposes

[options.extras_require]
dev =
    bump2version
    coverage [toml]
    pylint==2.15.6
    prospector[with_pyroma]==1.7.7  # https://github.com/PyCQA/prospector/issues/545
    isort
    pytest
    pytest-cov
    mkdocs
    mkdocs-material
    mkdocs-jupyter
    mkdocstrings[python]
    mkdocs-gen-files
publishing =
    twine
    wheel

[options.packages.find]
include = PyStemmusScope, PyStemmusScope.*

[isort]
lines_after_imports = 2
force_single_line = 1
no_lines_before = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
known_first_party = PyStemmusScope
src_paths = PyStemmusScope,tests
line_length = 120
